Another bugfix to broken viewports on mobile

--- a/style/default.css
+++ b/style/default.css
@@ -4,6 +4,12 @@
     --current-font: 'Inter', sans-serif;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
 html {
     box-sizing: border-box;
 }
